# robotArm

arm_controller/: CMakeLists.txt  arm_controller.xml  package.xml
arm_controller/arm_controller/: joint_slider.py
arm_controller/config/: robotarm_controllers.yaml
arm_controller/include/arm_controller/: arm_interface.hpp
arm_controller/launch/: controller.launch.py
arm_controller/src/: arm_interface.cpp  slider.cpp
arm_firmware/: package.xml
arm_firmware/firmware/arm_arduino_code/: arm_arduino_code.ino
debug_pkg/: package.xml  setup.py
debug_pkg/debug_pkg/: debug_node.py
robotarm/: CMakeLists.txt  arm_controller.xml  package.xml
robotarm/config/: arm.srdf  joint_limits.yaml  moveit.rviz
robotarm/include/robotarm/: arm_interface.hpp
robotarm/launch/: controller.launch.py  display.launch.xml  moveit.launch.py  moveit_wo.launch.py  sim.launch.xml  sim_wo.launch.xml
robotarm/src/: arm_interface.cpp
robotarm/urdf/: arm_core.urdf.xacro  arm_gazebo.urdf.xacro  arm_ros2_control.urdf.xacro  main.urdf.xacro  sim_ros2_control.urdf.xacro
robotarm_bringup/: CMakeLists.txt  package.xml
robotarm_bringup/launch/: real.launch.py  real_wo.launch.py  simulation.py
robotarm_funtionalities/: CMakeLists.txt  package.xml
robotarm_funtionalities/src/: execute_custom_path.cpp  execute_random_path.cpp
