<?xml version="1.0"?>
<package format="3">
  <name>arm_controller</name>
  <version>0.0.0</version>
  <description>Custom hardware interface for the robotic arm.</description>
  <maintainer email="emmanuelprime2@gmail.com">Emmanuel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
